Updated CSS with CEME title and fixed some spacing

--- a/ReactApp/src/views/css/customerApp.css
+++ b/ReactApp/src/views/css/customerApp.css
@@ -104,16 +104,16 @@ input[type=submit] {
 }
 
 .header {
-  padding: 10px;
+  padding: 0px;
   text-align: left;
   background:white;
   color:  rgb(0, 118, 184);
   font-size: 20px;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .submitButton {
-  padding: 15px 25px;
+  padding: 15px 15px;
   font-size: 16px;
   text-align: center;
   cursor: pointer;
@@ -123,6 +123,7 @@ input[type=submit] {
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
+  margin-right: 10px;
 }
 
 .submitButton:hover {background-color: rgb(6, 88, 136)}
